* 2014-11-18 - thorben.betten@open-xchange.com

 - Fix for bug 35512: Check for "html" or "xhtml" prefix in Content-Type's subtype

* 2014-11-17 - thorben.betten@open-xchange.com

 - Fix for bug 35490: Synchronize calls when checking mail standard folders
 - Fix for bug 35426: Let session obfuscator properly maintain such parameters that are supposed to be taken over from session to stored
                      session representation

* 2014-11-16 - thorben.betten@open-xchange.com

 - Fix for bug 35471: Set NULL if Unified Mail is absent when serving 'io.ox/mail/unifiedInboxIdentifier' setting
 - Fix for bug 35445: Ignore concurrent modification when writing last login time stamp

* 2014-11-14 - thorben.betten@open-xchange.com

 - Fix for bug 35470: Fixed check whether parent folder is a public PIM folder

* 2014-11-11 - martin.herfurth@open-xchange.com

 - Fix for bug 35419: Useless mail notification on state changes.

* 2014-11-11 - ioannis.chouklis@open-xchange.com

 - Fix for bug 35150: don't skip the '"' literal if it is preceded by a backslash '/'
 - Fix for bug 35416: use the correct 'FilterType' flag when listing custom mail filters

* 2014-11-11 - marcus.klein@open-xchange.com

 - Fix for bug 35408: corrected post install script for adding UserPermissionBits cache region to cache.ccf configuration file.

* 2014-11-10 - thorben.betten@open-xchange.com

 - Fix for bug 35141: Do not require administrator credentials in case "MASTER_AUTHENTICATION_DISABLED" is set to true
 - Fix for bug 35392: Added class guard when examining a cache event

* 2014-11-07 - thorben.betten@open-xchange.com

 - Fix for bug 35373: Only add transport properties if transport data has been set/inserted before

* 2014-11-06 - thorben.betten@open-xchange.com

 - Fix for bug 35374: Pass incoming request's IP address on redeem token call
 - Fix for bug 35359: Improved special /ajax/mail?action=all request fired when loading portal page

* 2014-11-05 - marcus.klein@open-xchange.com
