@@ -1,3 +1,7 @@
+* 2014-11-21 - thorben.betten@open-xchange.com
+
+ - Fix for bug 35546: Obey empty element tags when generating conform HTML content
+
 * 2014-11-18 - thorben.betten@open-xchange.com
 
  - Fix for bug 35512: Check for "html" or "xhtml" prefix in Content-Type's subtype
